# ssnolib

./: .build.bat  .coveragerc  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  codemeta.json  deploy.py  pyproject.toml  requirements-dev.txt  requirements-readthedocs.txt  requirements-readthedocs.xt  requirements.txt  setup.cfg  snt.tmp.md
.github/workflows/: tests.yml
docs/: Qualifications.ipynb  README.md  Standard Name.ipynb  StandardNameTable.ipynb  Tutorial.ipynb  api.rst  conf.py  index.rst  installation.rst  usage_with_xarray.ipynb
docs/tutorials/: Agents.ipynb  Qualifications.ipynb  StandardName.ipynb  StandardNameTable.ipynb  cf-standard-name-table.md  describeApublishedAStandardNameTable.ipynb  example_snt.jsonld  index.rst  referencing_StandardNameTables.ipynb
docs/tutorials/.ipynb_checkpoints/: Agents-checkpoint.ipynb  StandardName-checkpoint.ipynb  StandardNameTable-checkpoint.ipynb
ssnolib/: __init__.py  _version.py  agent.py  cli.py  config.py  context.py  core.py  h5accessor.py  lookups.py  namespace.py  plugins.py  resource.py  sparql_utils.py  standard_name.py  standard_name_table.py  utils.py  xraccessor.py
ssnolib/dcat/: __init__.py  resource.py  role.py
ssnolib/foaf/: __init__.py  agent.py
ssnolib/hdf5/: __init__.py  allotrope.py
ssnolib/m4i/: __init__.py  variable.py
ssnolib/pimsii/: __init__.py  property.py  quantity.py  variable.py
ssnolib/prov/: __init__.py  agent.py  attribution.py
ssnolib/qudt/: __init__.py  unit.py  utils.py
ssnolib/schema/: __init__.py  project.py
ssnolib/skos/: __init__.py  concept.py
ssnolib/sosa/: __init__.py
ssnolib/ssno/: __init__.py  parser.py  plugins.py  standard_name.py  standard_name_table.py  unit_utils.py
ssnolib/ui/: app.py  utils.py
ssnolib/ui/h5snt/: h5snt.py
ssnolib/ui/snt_manager/: README.md  app.py  utils.py
ssnolib/ui/snt_manager/static/css/: styles.css
ssnolib/ui/snt_manager/templates/core/: index.html
ssnolib/ui/snt_manager/templates/core/sections/standardNames/: addStandardNameModal.html
ssnolib/ui/snt_manager/templates/welcome/: index.html
ssnolib/ui/static/: main.js
ssnolib/ui/static/css/: styles.css
ssnolib/ui/templates/: addAuthorModal.html  authorSection.html  form.html  jsonld.html  standardNames.html  standardNamesSection.html  transformations.html  welcome.html
ssnolib/ui/templates/core/: index.html
ssnolib/ui/templates/core/sections/agents/: addAuthorModal.html  agentSection.html
ssnolib/ui/templates/core/sections/qualifications/: index.html
ssnolib/ui/templates/core/sections/standardNames/: standardNamesSection.html
ssnolib/ui/templates/post/: jsonld.html
tests/: README.md  air_temperature.json  snt.tmp.md  snt.yaml  snt2.yaml  snt_with_mod.yaml  test_classes.py  test_dcat.py  test_hdf5.py  test_m4i.py  test_namespace.py  test_pimsii.py  test_prov.py  test_readmecode.py  test_schema.py  test_sosa.py  test_sparql_utils.py  test_ssno.py  test_ssno_standard_name.py  test_ssno_table.py  test_unit_parsing.py  test_utils.py  test_version.py  utils.py
tests/data/: opencefadb_snt.jsonld  piv_dataset.jsonld  simpleSNT.jsonld  snt_from_scratch.jsonld  test_snt.yaml
ui/: app.py
ui/templates/: result.html  welcome.html
