[build-system]
requires = [
    "setuptools>=78.1.1",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ssnolib"
version = "2.2.0.3"
authors = [
    {name = "Matthias Probst", email = "matthias.probst@kit.edu"}
]
description = "SSNOlib is a Python library for working with the Standard Name Ontology (SSNO)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">3.8, <3.14"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering"
]
keywords = ["ontology", "rdf", "semantic-web", "standard-names", "metadata"]
dependencies = [
    "rdflib>=7.0.0",
    "appdirs>=1.4.4",
    "pydantic[email]>=2.7.4,<=2.10.6",
    "python-dateutil>=2.9.0",
    "requests>=2.32.4",
    "ontolutils>=0.27.0,<0.28.0",
    "pint>=0.24.4"
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "xmltodict>=0.13.0",
    "pypandoc>=1.13"
]
xml = [
    "xmltodict>=0.13.0"
]
html = [
    "pypandoc>=1.13"
]
app = [
    "Flask>=3.0.3"
]
hdf = [
    "h5rdmtoolbox",
    "streamlit>=1.5.0"
]
yaml = [
    "pyyaml>6.0.0"
]
dev = [
    "ssnolib[test,xml,html,app,hdf,yaml]"
]
complete = [
    "ssnolib[test,xml,html,app,hdf,yaml]"
]

[project.urls]
Homepage = "https://github.com/matthiasprobst/ssnolib"
Repository = "https://github.com/matthiasprobst/ssnolib"
Issues = "https://github.com/matthiasprobst/ssnolib/issues"

[project.scripts]
ssnolib = "ssnolib.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
ssnolib = [
    "ui/**/*.html",
    "ui/static/*.js",
    "ui/static/css/*.css",
    "ssno/templates/standard_name_table.html",
    "tests/data/*"
]

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["tests"]

[tool.coverage.paths]
source = ["tests"]

[tool.coverage.run]
relative_files = false
omit = [
    "tests/*",
    "ssnolib/ui/*"
]

[tool.coverage.report]
exclude_lines = [
    "@abstractmethod",
    "@abc.abstractmethod",
    "pragma: no cover",
    "def __repr__",
    "def __hash__",
    "def __str__",
    "def _repr_html_"
]