[metadata]
name = ssnolib
version = 0.1.0
author = Matthias Probst
author_email = matthias.probst@kit.edu
description = SSNOlib is a Python library for working with the SSNO ontology.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthiasprobst/SSNOlib
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.8, <3.13
include_package_data = True
install_requires =
    rdflib
    appdirs
    pydantic[email]
    python-dateutil
    requests

[options.extras_require]
test =
    pytest >= 7.1.2
    pytest-cov
    h5rdmtoolbox
xml =
    xmltodict
yaml =
    pyyaml
complete =
    %(xml)s
    %(yaml)s
    %(test)s

[tool:pytest]
python_files = test_*.py
testpaths = tests

[coverage:paths]
source =
    tests

[coverage:run]
relative_files = false
