[metadata]
name = ssnolib
version = 2.2.0.0
author = Matthias Probst
author_email = matthias.probst@kit.edu
description = SSNOlib is a Python library for working with the Standard Name Ontology (SSNO).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthiasprobst/ssnolib
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >3.8, <3.14
include_package_data = True
install_requires =
    rdflib>=7.0.0
    appdirs>=1.4.4
    pydantic[email]>=2.7.4,<=2.10.6
    python-dateutil>=2.9.0
    requests>=2.32.4
    ontolutils>=0.22.1,<1.0.0
    pint>=0.24.4

[options.package_data]
ssnolib =
    ui/**/*.html
    ui/static/*.js
    ui/static/css/*.css
    ssno/templates/standard_name_table.html
    tests/data/*

[options.extras_require]
test =
    pytest >= 8.3.2
    pytest-cov>=0.5.1
    xmltodict
    pypandoc>=1.13
xml =
    xmltodict>=0.13.0
html =
    pypandoc>=1.13
app =
    Flask>=3.0.3
hdf =
    h5rdmtoolbox
    streamlit>=1.5.0
yaml =
    pyyaml>=6.0.2
complete =
    %(test)s
    %(xml)s
    %(html)s
    %(app)s
    %(hdf)s
    %(yaml)s

[tool:pytest]
python_files = test_*.py
testpaths = tests

[coverage:paths]
source =
    tests

[coverage:run]
relative_files = false


[options.entry_points]
console_scripts =
    ssnolib = ssnolib.cli:main
